Optimization and fixed a tag

--- a/src/details.html
+++ b/src/details.html
@@ -19,7 +19,7 @@
                 <h2 id="title"></h2>
                 <div><strong>Authors: </strong><span id="authors"></span><div>
                 <div><strong>Publish Date: </strong><span id="first-publish-date"></span></div>
-                <div><strong>Description: </strong><p id="description"</p></div>
+                <div><strong>Description: </strong><p id="description"></p></div>
             </div>
         </div>
 
